--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Front-End Tinebase OTP</title>
-  <script src="crypto-js.js"></script>
-  <script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     function hexToBytes(hex) {
       return (hex.match(/.{1,2}/g) ?? []).map(char => Number.parseInt(char, 16));
     }
