fix GitHub pages error

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Front-End Tinebase OTP</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="otp.js"</script>
+  <script src="https://tkm.icu/Front-End-Tinebase-OTP/otp.js"</script>
 </head>
 <body>
   <h1>Timebase OTP Generator/Validator</h1>
