--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>Front-End Tinebase OTP</title>
+  <title>Front-End Timebase OTP</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://tkm.icu/Front-End-Tinebase-OTP/otp.js"</script>
+  <script src="https://tkm.icu/Front-End-Timebase-OTP/otp.js"</script>
 
 </head>
 <body>
